--- a/TT-2016-B045/archivosTex/analisis.tex
+++ b/TT-2016-B045/archivosTex/analisis.tex
@@ -9,15 +9,17 @@ Como se expuso anteriormente, el protocolo criptográfico nos arroja excelentes 
 
 Para la implementación del protocolo criptográfico, se cuentan con las herramientas de software necesarias ya que estas existen y están disponibles para su uso y disponibilidad inmediata al desarrollo del protocolo. Cabe mencionar que las herramientas que involucran todo el desarrollo del protocolo, se encuentran completas en tanto a funcionalidades, soportes, documentación, seguridad, etc. 
 En cuanto a los conocimientos necesarios al protocolo, se cuentan con los suficientes que este protocolo necesita para su applicación. Dichos conocimientos se han adquirido a lo largo de la estadía en la ingeniería mediante las clases recibidas en las instalaciones de la  escuela o por la adquisición por medios externos. Ahora bien, un pequeño inconveniente para la aplicación del protocolo, es el desarrollo del software, ya que existen partes fundamentales del protocolo que requieren de nuevo conocimiento que aun no se adquiere y es necesario aprender, por tanto existe una pequeña posibilidad de que esto signifique un retraso en la producción del protocolo. 
-\\
-\textbf{Lenguaje de programación:} para el desarrollo del sistema se estará trabajando con varios lenguajes de programación, la base de este desarrollo será Python, ya que es un lenguaje de fácil comprensión y con una lógica bastate familiar a lenguajes que anteriormente se habían trabajado, además de que Python nos permite trabajar primitivas criptográficas con una mayor facilidad. \\
-\textbf{Sistema gestor de base de datos:} Se implementará MySQL como un manejador de base de datos, ya que es software libre y además se cuenta con una mayor experiencia de manejo y entendimiento. 
+
+\begin{itemize}
+
+	\item \textbf{Lenguaje de programación:} para el desarrollo del sistema se estará trabajando con varios lenguajes de programación, la base de este desarrollo será Python, ya que es un lenguaje de fácil comprensión y con una lógica bastate familiar a lenguajes que anteriormente se habían trabajado, además de que Python nos permite trabajar primitivas criptográficas con una mayor facilidad. \\
+	\item \textbf{Sistema gestor de base de datos:} Se implementará MySQL como un manejador de base de datos, ya que es software libre y además se cuenta con una mayor experiencia de manejo y entendimiento. 
 \\
 De acuerdo con los requerimientos del sistema, los componentes necesarios para la implementación de este protocolo son: 
 
-\textbf{Hardware} 
+	\item \textbf{Hardware} 
 Se requiere de equipo de cómputo para poder llevar a cabo la codificación del protocolo y la configuración de los servidores que le darán soporte a las actividades realizadas en la interacción del usuario con el sistema. El equipo de trabajo cuenta con 3 computadoras personales (LAPTOP) que son las siguientes: 
-\begin{longtable}{| p{2.5cm} |  p{2.5cm} |  p{2.5cm} |  p{2.5cm} |  p{2.5cm} |  p{2.7cm} |}
+\begin{longtable}{ |  p{5cm} |  p{10.5cm} |}
 
 % aquí añadimos el encabezado de la primera hoja.
 \hline
@@ -46,21 +48,21 @@ Laptop HP Pavilion g4 & \begin{itemize}
 				\item Tipo Sistema: 64bits x64
 			      \end{itemize} \\ \hline
 
-Acer Aspire V5 &  \begin{itemize}
+Laptop Acer Aspire V5 &  \begin{itemize}
 				\item Procesador: Intel(R) Celeron(R)  1.50GHz 
 				\item Memoria RAM: 2.00GB
 				\item Disco Duro: 250GB
 				\item Tipo Sistema: 64bits x64
 			      \end{itemize} \\ \hline
 
-HP probook &  \begin{itemize}
+Laptop HP probook &  \begin{itemize}
 				\item Procesador: AMD Phenom(tm) ll X2 545  3.00GHz 
 				\item Memoria RAM: 4.00GB
 				\item Disco Duro: 350GB
 				\item Tipo Sistema: 64bits x64
 			      \end{itemize} \\ \hline
 
-ownCloud &  \begin{itemize}
+Servidor ownCloud &  \begin{itemize}
 				\item Servicio de alojamiento de archivos con almacenamiento en la nube
 				\item Servidores de instalación: PHP, SQLite. MySQL, PostgreSQL
 				\item Servidor de archivos: WebDAV
@@ -71,25 +73,24 @@ ownCloud &  \begin{itemize}
 \label{Hardware}
 \end{longtable}
 
-\textbf{Software}
+	\item \textbf{Software}
 Con respecto al software, no se pretende usar un sistema operativo en específico ya que el servicio de la nube es compatible con cualquier sistema operativo en que se esté desarrollando. Sin embargo se cuenta con los siguientes sitemas operativos: 
 
 \begin{table}[htb]
 \centering
-\begin{tabular}{| p{2cm} |  p{13.5cm} |}
+\begin{tabular}{| p{5cm} |  p{10.5cm} |}
 \hline
-\multicolumn{2}{|c|}{\textbf{Sistemas operativos}} \\ \hline
+\multicolumn{2}{|c|}{\textbf{Softawe}} \\ \hline
 \textbf{Tipo} &  \textbf{Cantidad} \\
 \hline \hline
-Windows 8.1 Pro & 2\\ \hline
-Windows 10 Pro & 1\\ \hline
+S.O. Windows 8.1 Pro & 2\\ \hline
+S.O. Windows 10 Pro & 1\\ \hline
 
 \end{tabular}
-\caption{Requerimientos funcionales del servidor de llaves}
+\caption{Componentes Lógicos}
 \label{Servidor de Llaves }
 \end{table}
-
-
+\end{itemize}
 
 
 
@@ -102,7 +103,7 @@ Este protocolo pretende atender al problema del crecimiento en la infraestructur
 El estudio de factibilidad económica nos permite analizar los costo - beneficios monetarios que se obtendrán con el desarrollo del proyecto, ya que dicho protocolo en un largo plazo podría comenzar en producción industrial para su comercialización y districución en el mercado de las tecnologías de la información, ya que proveerá de servicios en el cómputo nube que hoy en día las empresas están optando por invertir en el y optimizar sus recursos y procesos del negocio. 
 
 En cuanto al análisis de el gasto económico que se requiere para la implementación y la realización de pruebas del protocolo, existe un beneficio ya que todos los componentes para el desarrollo del sistema son libres,es decir que no se realizará la adquisición de licencias de desarrollo ni programas para la implementación. 
-\\ El servidor que nos proveerá del almacenamiento en la nube de nombre \textbf{ownCloud.org} es de libre acceso y no existe restricción alguna la utilización de este. Nos permite una libre manipulación y configuración de tal modo que podamos cumplir nuestros objetivos.
+\\ El servidor que nos proveerá del almacenamiento en la nube de nombre \textbf{ownCloud.org} es de libre acceso y no existe restricción alguna para la utilización de este. Nos permite una libre manipulación y configuración de tal modo que podamos cumplir nuestros objetivos.
 
 
 \subsection{Análisis de riesgos} 
