--- a/TT-2016-B045/archivosTex/introduccion.tex
+++ b/TT-2016-B045/archivosTex/introduccion.tex
@@ -154,6 +154,30 @@ Como se observa en la siguiente figura ~\ref{fig:1-3-1} varios usuarios realizan
 
 \section{Organización del documento. }
 
-cap  2
-El contenido de este capítulo abordará temas estrechamente relacionados con la criptografía, la seguridad de la información y las implicaciones que ésta podría traer si se encuentra corrompida por algún adversario. También, este capítulo contiene información acerca de los 2 tipos de criptografía que existen mencionando los diferentes esquemas de cifrado y los modos de operación que son utilizados por algunos de estos. De igual forma se describe con detalle los servicios que ofrece el cómputo nube, haciendo énfasis en un servicio en particular que es el de almacenamiento que se utilizará para la implementación de este protocolo criptográfico.
+El presente documento que detalla todo el proceso de creación de este protocolo criptográfico está conformado por 6 diferentes capítulos los cuáles son: 
+
+\begin{itemize}
+	\item Capítulo 1 \textbf{Introducción} \\
+                     En este capítulo se expone cuál es el contexto en el que este trabajo terminal se desarrollará, así mismo se describe cuá a sido la problemática detectada a partir del análisis del contexto en el cuál se desarrola la investigación y finalmente se muestran cuales son los objetivos tanto general como específicos de este trabajo terminal, es decir, cuál es la finalidad de éste protocolo criptográfico. 
+
+	\item Capítulo 2 \textbf{Marco Teórico} \\
+El contenido de este capítulo abordará temas estrechamente relacionados con la criptografía y la seguridad de la información. También, este capítulo contiene información acerca de los 2 tipos de criptografía que existen mencionando los diferentes esquemas de cifrado y los modos de operación que son utilizados por algunos de estos. De igual forma se describe con detalle los servicios que ofrece el cómputo nube. 
+
+	\item Capítulo 3 \textbf{Estado del Arte} \\
+	En dicho capítulo se encontrará plasmada una comparativa realizada entre sistemas o prototipos que tienen una similitud con el protocolo criptográfico que este trabajo terminal propone. Esta comparativa contendrá detalles técnicos enfocados a las herramientas criptográficas utilizadas en estos sistemas.
+
+	\item Capítulo 4 \textbf{Protocolo Dupless} \\
+            El capítulo 4 contiene a gran detalle el funcionamiento del protocolo criptográfico Dupless, dicho protocolo será la base de la investigación para el desarrollo de este trabajo terminal. 
+
+	\item Capítulo 5 \textbf{Análisis} \\
+	Como otro capítulo más de este documento se encuentra el análisis del protocolo criptográfico, el cuál se compone de la realización de un estudio de factibilidad y análisis de riesgos para la realización de este proyecto, asimismo se muestra cuál será la arquitectura de trabajo terminal, la descripción de todos los procesos que involucrán la creación de este protocolo, el modelo de entidades que comprende diagrama entidad relación y el diagrama de clases para su implementación. Al final de este capítulo se podran encontrar los requerimientos de este protocolo criptográfico tanto funcionales como no funcionales y las reglas de negocio que lo componen.
+
+	\item Capítulo 6 \textbf{Diseño} \\
+	El capítulo de diseño tiene como contenido la especificación de la plataforma del protocolo, es decir, la especificación de recursos necesarios para poder llevar a cabo su implementación con las herramientas necesarias, y también todos los casos de usos que involucran el funcionamiento de dicho protocolo.
+
+\end{itemize}
+
+
+
+
     
