--- a/TT-2016-B045/archivosTex/analisis.tex
+++ b/TT-2016-B045/archivosTex/analisis.tex
@@ -35,7 +35,7 @@ Se requiere de equipo de cómputo para poder llevar a cabo la codificación del 
 \endhead
 
 % aquí añadimos el fondo de todas las hojas, excepto de la última.
-\multicolumn{2}{|c|}{Sigue en la página siguiente.}
+\multicolumn{2}{|c|}{Continua en la siguiente página.}
 \endfoot
 
 % aquí añadimos el fondo de la última hoja.
@@ -127,7 +127,7 @@ EL análisis de riesgos consiste en identificar los riesgos que este sistema pue
 \endhead
 
 % aquí añadimos el fondo de todas las hojas, excepto de la última.
-\multicolumn{6}{|c|}{Sigue en la página siguiente.}
+\multicolumn{6}{|c|}{Continua en la siguiente página}
 \endfoot
 
 % aquí añadimos el fondo de la última hoja.
@@ -160,7 +160,7 @@ EL análisis de riesgos consiste en identificar los riesgos que este sistema pue
 \endhead
 
 % aquí añadimos el fondo de todas las hojas, excepto de la última.
-\multicolumn{6}{|c|}{Sigue en la página siguiente.}
+\multicolumn{6}{|c|}{Continua en la siguiente página.}
 \endfoot
 
 % aquí añadimos el fondo de la última hoja.
@@ -178,7 +178,7 @@ R8 & Falta de conocimientos & MEDIA & MEDIA & MUY ALTO & El equipo no se encuent
 R9 & Sobre estimación de insumos & MEDIA & MEDIA & MODERADO & Los insumos para la implementación del sistema no son los adeacuados para el desarrollo. 
 
 \\ \hline
-\caption{Análisis de riesgos del sistema}
+\caption{Análisis de riesgos del proyecto}
 \label{Análisis de riesgos }
 \end{longtable}
 
@@ -458,7 +458,7 @@ RF – N1 & El sistema permitirá al servicio de almacenamiento llevar a cabo un
 \endhead
 
 % aquí añadimos el fondo de todas las hojas, excepto de la última.
-\multicolumn{3}{|c|}{Sigue en la página siguiente.}
+\multicolumn{3}{|c|}{Continua en la siguiente página}
 \endfoot
 
 % aquí añadimos el fondo de la última hoja.
