--- a/TT-2016-B045/archivosTex/acronimos.tex
+++ b/TT-2016-B045/archivosTex/acronimos.tex
@@ -4,6 +4,8 @@
 \begin{itemize}
 \item HP: Hewllet-Packard.
 \item DupLESS: Server-Aided Encryption for Deduplicated Storage (Cifrado Asistido por un Servidor para Almacenamiento Sin Duplicados).
+\item OPRF: Oblivious Pseudorandom Function (Función Pseudoaleatoria Insonsistente)
+\item MLE : Message-Locked Encryption (Cifrado por bloqueo de mensajes)
 \item ABS: The Apportioned Backup System (Sistema de Respaldo Asignado).
 \item SIGOPS: Special Interest Group on Operating Systems (Grupo de Interés Especial sobre Sistemas Operativos).
 \item TahoeFS: The Least-Authority Filesystem (Sistema de Archivos de Menor Autoridad).
