--- a/TT-2016-B045/archivosTex/analisis.tex
+++ b/TT-2016-B045/archivosTex/analisis.tex
@@ -1,4 +1,10 @@
 
+El capítulo de análisis dentro de este documento, contiene todo el proceso que corresponde a la etapa de análisis de la metodología en cascada. Dicho análisis comprende la presentación del estudio de factibilidad de este proyecto, factibilidad técnica, factibilidad operativa y económica, además de un análisis de riesgos posibles en la realización de este proyecto. Asimismo, se presenta la arquitectura que tendrá el protocolo criptográfico, la descripción de todos los procesos involucrados en el funcionamiento de este protocolo junto con los actores correspondientes a cada proceso. Como parte final de este capítulo, se encontrarán los requerimientos funcionales que este protocolo debe cubrir y de igual forma los requerimientos funcionales que estarán presentes dentro del proyecto. 
+
+
+
+
+
 
 \section{Estudio de Factibilidad}
 
