--- a/TT-2016-B045/archivosTex/diseño.tex
+++ b/TT-2016-B045/archivosTex/diseño.tex
@@ -1,10 +1,7 @@
 %\usepackage{casouso_estilo}
 %\chapter{An\'alisis y Dise\~no} % (fold)
 
-
-
-
-
+El capítulo de diseño, esta conformado por la especificación de como está conformado el protocolo cirptográfico. Dicho capítulo contiene la especificación de la plataforma del protocolo, es decir, los recursos tanto de hardware como de software necesarios para poder desarrollar el proyecto con las herramientas tecnológicas necesarias. El capítulo muestra los modelos de entidades del protocolo, dichos modelos comprenden el modelo entidad relación que corresponde a la base de datos creada para la persistencia de los datos involucrados en el protocolo, y el diagrama de clases que brinda un bosquejo del funcionamiento e interacción de atributos y operaciones del protocolo. Por último, se muestra la descripción de todos los casos de uso que conforman al proyecto. 
 
 
 
