--- a/TT-2016-B045/archivosTex/preliminares.tex
+++ b/TT-2016-B045/archivosTex/preliminares.tex
@@ -1,5 +1,11 @@
 %\chapter{Preliminares. } % (fold)
 
+El contenido de este capítulo abordará temas estrechamente relacionados con la criptográfia, la seguridad de la información y las implicaciones que ésta podría traer si se encuentra corrompida por algún adversario. Se abordará información acerca de los 2 tipos de criptografía que existen, exlicando con detalle las características de los diferentes esquemas de cifrado y los modos de operación que son utilizados por algunos de estos. Un tópico de gran importancia dentro de este protocolo son las funciones hash criptográficas, dichas funciones son mencionadas en este capítulo, al igual que las firmas digitales, firmas a ciegas y firmas digitales con RSA ya que estas juegan un papel fundamental para el funcionamiento de este proyecto.  De igual forma se describe con detalle los servicios que ofrece el cómputo nube, haciendo énfasis en un servicio en particular que es el almacenamiento que se utilizará para la implementación de este protocolo criptográfico. 
+
+
+
+
+
 \section{Preliminares criptograficos. }
  \begin{itemize}
 \item \textbf{La Criptografía. }
